# bgvocab

./: .gitignore  Cargo.toml  LICENSE  README.md  vocab-small-original.txt  vocab-small-to-learn.txt  vocab-small.txt  vocab.txt
src/: main.rs
vocab-bin/: .gitignore  Cargo.toml  gen.sh  vocab.txt
vocab-bin/src/: main.rs
vocab-lib/: Cargo.toml
vocab-lib/src/: lib.rs
vocab-wasm/: Cargo.toml
vocab-wasm/src/: lib.rs
vocab-web/: Cargo.toml
vocab-web/src/: main.rs
