[package]
name = "bgvocab"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html2text = "0.4.3"
to-html = "0.1.3"
tui = "0.19"
crossterm = "0.25"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }