[package]
name = "vocab-bin"
version = "0.1.0"
authors = ["Anton Logvinenko <anton.logvinenko@gmail.com>"]
edition = "2021"

[dependencies]
html2text = "0.4.3"
to-html = "0.1.3"
tui = "0.19.0"
crossterm = "0.25.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
vocab-lib = { version = "*", path = "../vocab-lib" }
